--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,23 +2,21 @@
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
+    - ["mkdir -p ~/.config/nvim/{backup,swap,undo}", Creating nvim backup dirs]
 
 - link:
     ~/.dotfiles: ''
     ~/.zpreztorc: zpreztorc
     ~/.zprofile: zprofile
     ~/.zshrc: zshrc
-    ~/.nvimrc: nvimrc
-    ~/.vimrc: vimrc
-    ~/.vim/after/ftplugin:
+    ~/.config/nvim/init.vim: nvimrc
+    ~/.config/nvim/after/ftplugin:
         create: true
-        path: vim/after/ftplugin/
-    ~/.nvim/after/ftplugin:
+        path: nvim/after/ftplugin/
+    ~/.config/nvim/UltiSnips:
+        relink: true
+        path: nvim/UltiSnips/
+    ~/.config/nvim/autoload/plug.vim:
         create: true
-        path: vim/after/ftplugin/
-    ~/.vim/UltiSnips:
         relink: true
-        path: vim/UltiSnips/
-    ~/.nvim/UltiSnips:
-        relink: true
-        path: vim/UltiSnips/
+        path: external/vim-plug/plug.vim
