Install personal-flavoured prezto inside dotfiles
I try to make this managable with dotbot

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/vim-plug"]
 	path = external/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
+[submodule "external/prezto"]
+	path = external/prezto
+	url = git@github.com:bixel/prezto.git
