--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.zpreztorc: zpreztorc
     ~/.zprofile: zprofile
     ~/.zshrc: zshrc
+    ~/.tmux.conf: tmux.conf
     ~/.config/nvim/init.vim: nvimrc
     ~/.config/nvim/after/ftplugin:
         create: true
