--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,6 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # C-l is taken over by vim style pane navigation
 bind C-l send-keys 'C-l'
+
+# try to use correct colors
+set -g default-terminal "screen-256color"
