remove unneccessary colo chunk

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,4 +22,4 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind C-l send-keys 'C-l'
 
 # try to use correct colors
-set -g default-terminal "screen-256color-bce"
+set -g default-terminal screen-256color
