--- a/tmux.conf
+++ b/tmux.conf
@@ -5,17 +5,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Clear the pane and it's history
-bind -n C-k send-keys C-l \; clear-history
-
-# C-l is taken over by vim style pane navigation
-bind C-l send-keys 'C-l'
-
 # try to use correct colors
 set -g default-terminal screen-256color
 
 # reload tmux config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# rebind some clear history command
+bind-key C-l send-keys C-l \; clear-history
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.dotfiles/external/tpm/tpm'
