vi key bindings tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,5 +14,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # rebind some clear history command
 bind-key C-l send-keys C-l \; clear-history
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.dotfiles/external/tpm/tpm'
