reenable mouse scrolling while in input mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g mouse on
 
+# allow scroll while in input mode
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
 # try to use correct colors
 set -g default-terminal screen-256color
 
