Enhance  mouse handling

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,21 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# enable mouse support
 set -g mouse on
+# ... and enable mouse mode toggling
+bind m run "\
+    tmux show-options -g | grep -q \"mouse on\";\
+    if [ \$? -eq 0 ];\
+        then toggle=off;\
+    else\
+        toggle=on;\
+    fi;\
+    tmux display-message \"mouse is now: \$toggle\";\
+    tmux set-option -g mouse \$toggle;"
+
+# required for vim-clipboard integration
+set -g focus-events on
 
 # allow scroll while in input mode
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
