Add atom links to dotfiles

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -27,3 +27,7 @@
         path: external/prezto/
     /usr/local/bin/syncIgnore: scripts/syncIgnore
     ~/.ssh/rc: sshrc
+    ~/.atom:
+        relink: true
+        path: atom/
+        create: true
