--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,7 +3,12 @@
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - ["mkdir -p ~/.config/nvim/{backup,swap,undo}", Creating nvim backup dirs]
-    - [defaults write com.apple.loginwindow LoginHook osx_startup_script.sh, setup login hook to remap keys]
+    -
+      command: sudo defaults write com.apple.loginwindow LoginHook $PWD/osx_startup_script.sh && ./osx_startup_script.sh
+      description: setup login hook to remap keys
+      stderr: true
+      stout: true
+      stin: true
 
 - link:
     ~/.dotfiles: ''
