Add login hook to remap ESC SHIFT to sudo user instead of current one

--- a/install_osx.conf.yaml
+++ b/install_osx.conf.yaml
@@ -1,6 +1,6 @@
 - shell:
     -
-      command: defaults read com.apple.loginwindow || sudo defaults write com.apple.loginwindow LoginHook $PWD/osx_startup_script.sh && ./osx_startup_script.sh
+      command: sudo defaults read com.apple.loginwindow || sudo defaults write com.apple.loginwindow LoginHook $PWD/osx_startup_script.sh && sudo ./osx_startup_script.sh
       description: setup login hook to remap keys
       stderr: true
       stout: true
