Update a few things

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,9 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # rebind some clear history command
 bind C-l send-keys C-l \; clear-history
 
+# 500k lines of history...
+set-option -g history-limit 500000
+
 # reuse directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
