--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,7 @@
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - ["mkdir -p ~/.config/nvim/{backup,swap,undo}", Creating nvim backup dirs]
+    - ["touch ~/.config/nvim/local.vimrc", Touching local vimrc]
 
 - link:
     ~/.dotfiles: ''
