Export iTerm2 Profile

--- a/install_osx.conf.yaml
+++ b/install_osx.conf.yaml
@@ -9,3 +9,4 @@
 - link:
     /usr/local/bin/syncIgnore: scripts/syncIgnore
     ~/.latexmkrc: latexmkrc
+    ~/Library/Application Support/iTerm2/DynamicProfiles/iterm-profiles.json: iterm-profiles.json
