Try to prevent esc key delays in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,5 +42,8 @@ bind c new-window -c "#{pane_current_path}"
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# prevent delayed escape key
+set -s escape-time 0
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.dotfiles/external/tpm/tpm'
