Add tunings from last procrastination session

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # enable mouse support
 set -g mouse on
@@ -40,7 +41,9 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.dotfiles/external/tpm/tpm'
