--- a/install_osx.conf.yaml
+++ b/install_osx.conf.yaml
@@ -10,3 +10,4 @@
     /usr/local/bin/syncIgnore: scripts/syncIgnore
     ~/.latexmkrc: latexmkrc
     ~/Library/Application Support/iTerm2/DynamicProfiles/iterm-profiles.json: iterm-profiles.json
+    ~/.zsh_local: zsh_local_osx
