Move p10k config to dotfiles

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,3 +29,4 @@
         path: external/vim-plug/plug.vim
     ~/.gitignore_global: gitignore_global
     ~/.taskrc: taskrc
+    ~/.p10k.zsh: p10k.zsh
