Use more defaultish zlogin, update zlogin

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,7 +10,7 @@
 
 - link:
     ~/.dotfiles: ''
-    ~/.zprofile: zprofile
+    ~/.zlogin: zlogin
     ~/.zshrc: zshrc
     ~/.tmux.conf: tmux.conf
     ~/.clang-format: clang-format
