lets start with coc.nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,8 @@ bind c new-window -c "#{pane_current_path}"
 set-window-option -g mode-keys vi
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+# And do not exit copy mode after copying
+bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 
 # prevent delayed escape key
 set -s escape-time 0
