Relink dotbot links by default

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,11 +1,12 @@
 - clean: ['~']
-
+- defaults:
+    link:
+      relink: true
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - ["mkdir -p ~/.config/nvim/{backup,swap,undo}", Creating nvim backup dirs]
     - ["touch ~/.config/nvim/local.vimrc", Touching local vimrc]
     - ["git config --global core.excludesfile ~/.gitignore_global"]
-
 - link:
     ~/.dotfiles: ''
     ~/.zlogin: zlogin
