--- a/coc-extensions.json
+++ b/coc-extensions.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "coc-json": ">=1.3.4",
-    "coc-pyright": ">=1.1.134",
-    "coc-vimtex": ">=1.0.4",
-    "coc-yaml": ">=1.3.1"
+    "coc-json": ">=1.3.6",
+    "coc-metals": ">=1.0.7",
+    "coc-pyright": ">=1.1.164",
+    "coc-yaml": ">=1.4.2"
   }
 }
