--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,8 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 
 # try to use correct colors
 set -g default-terminal screen-256color
+# 
+set-option -sa terminal-overrides ',xterm-256colo:RGB'
 
 # reload tmux config
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
