--- a/coc-extensions.json
+++ b/coc-extensions.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "coc-json": ">=1.3.6",
-    "coc-pyright": ">=1.1.194",
+    "coc-json": ">=1.8.0",
+    "coc-metals": ">=1.0.14",
+    "coc-prettier": ">=9.3.1",
+    "coc-pyright": ">=1.1.301",
+    "coc-sqlfluff": ">=0.11.0",
     "coc-toml": ">=1.1.0",
-    "coc-vetur": ">=1.2.5",
-    "coc-vimtex": ">=1.0.4",
-    "coc-yaml": ">=1.4.2"
+    "coc-yaml": ">=1.9.0"
   },
   "disabled": [],
   "locked": [],
-  "lastUpdate": 1665873311480
+  "lastUpdate": 1691565768803
 }
