--- a/sheldon-plugins.toml
+++ b/sheldon-plugins.toml
@@ -40,3 +40,7 @@ use = ["shell/*.zsh"]
 [plugins.git]
 github = "sorin-ionescu/prezto"
 use = ["modules/git/init.zsh", "init.zsh", "modules/completion/init.zsh"]
+
+[plugins.docker-cli]
+github = "docker/cli"
+use = ["contrib/completion/zsh/_docker"]
